--- a/main.css
+++ b/main.css
@@ -20,6 +20,14 @@
 text{
   font-family: "AngelciaProDisplay-Regular" !important;
 }
+
+.transparent-box {
+  background: rgba(255, 255, 255, 0.51);
+  margin: auto;
+  padding-top: 5%;
+  padding-bottom: 5%;
+
+}
 /* original style */
 
 .px-0-force {
@@ -132,7 +140,7 @@ text{
 .herobanner-overview-overlay {
   position: absolute;
   top: 0;
-  background: rgba(0, 0, 0, 0.4);
+  /* background: rgba(0, 0, 0, 0.4); */
   color: #f1f1f1;
   width: 100%;
   height: 100%
@@ -212,7 +220,7 @@ text{
 }
 
 .herobanner-inset-shadow {
-  box-shadow: inset 0px 100px 110px 10px rgba(0, 0, 0, 0.6), inset 0px -300px 110px -10px rgba(0, 0, 0, 0.4)
+  /* box-shadow: inset 0px 100px 110px 10px rgba(0, 0, 0, 0.6), inset 0px -300px 110px -10px rgba(0, 0, 0, 0.4) */
 }
 
 h1.text-giant {
